# noxU-WebApp

./: LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/forms/: admin_forms.py  user_forms.py
app/routers/: account.py  admin.py  analyse.py  employee.py  users.py
app/static/css/: fonts.css  lists.css  main.css  navigation.css
app/templates/: base.html  employee_main_page.html  home.html
app/templates/admin/: admin_main_page.html  orders.html  settings.html  timelog.html
app/templates/analyse/: analyse.html  summary.html
app/templates/employee/: employee_main_page.html  orders.html  settings.html  timelog.html
