[tool.poetry]
name = "noxu-webapp"
version = "0.1.0"
description = "Web applicaton for a noxU - Image recognition system for order completeness check"
authors = ["Szymon Sobczak<259275@student.pwr.edu.pl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "noxu_webapp"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
requests = "^2.31.0"
flask-bootstrap = "^3.3.7.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
wtforms = "^3.1.1"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
skip = [".gitignore"]
extend_skip = [".md", ".rst", ".json", ".txt"]
skip_glob = ["docs/*"]
line_length = 100
lines_after_imports = 2
lines_between_types = 1
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true


[tool.black]
line-length = 100

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort ./app ./db && black ./app ./db "
lint = """
    pylint ./app ./db  && \
    black ./app ./db  && \
"""
